# Axiom

./: .gitignore  CMakeLists.txt  PROJECT_CHANGELOG.md  README.md  gitignore
apps/headless/: CMakeLists.txt  main.cpp
apps/viewer/AxiomViewer/: AxiomViewer.csproj  AxiomViewer.slnx  NativeBindings.cs  Program.cs
apps/viewer_csharp/: .gitignore  Axiom.Viewer.sln  README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  COMBAT_A1.md  COMMAND_MODEL.md  CONTENT_DATABASE.md  DECISIONS.md  DECISIONS_ARCHIVE.md  README.md  SAVE_FORMAT.md  SNAPSHOT_EVENT_FORMATS.md  SPATIAL_MODEL.md  TASK-000.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TOOLCHAIN.md  TRUTH_VS_PRESENTATION.md  UNIT_SYSTEM.md  VISION.md  WORLD_INTERFACE.md  WORLD_PROFILES.md
engine/: CMakeLists.txt
engine/bindings/c/include/: ax_api.h
engine/bindings/c/src/: ax_api.cpp
engine/core/: world.cpp  world.h
engine/core/math/: ax_math_div.h  ax_math_overflow.h  ax_math_safe.cpp  ax_math_safe.h  ax_math_selftest.cpp  ax_math_selftest.h  ax_math_types.h
engine/include/: ax_abi.h
engine/src/: ax_core.cpp  ax_last_error.cpp  ax_last_error.h
tools/scripts/: sync-native-to-csharp.ps1
